Add machine translations

--- a/i18n/po/ja_JP/_guides/amazon-dynamodb.adoc.po
+++ b/i18n/po/ja_JP/_guides/amazon-dynamodb.adoc.po
@@ -799,8 +799,8 @@ msgid ""
 msgstr ""
 "DynamoDBクライアント(syncとasync)はどちらも、 `src/main/resources` ディレクトリで提供されている "
 "`application.properties` "
-"ファイルを介して設定可能です。さらに、同期クライアントの適切な実装をクラスパスに追加する必要があります。デフォルトでは、エクステンションは `java.net."
-"URLConnection` HTTP クライアントを使用するので、URL 接続クライアントの依存関係を `pom.xml` "
+"ファイルを介して設定可能です。さらに、同期クライアントの適切な実装をクラスパスに追加する必要があります。デフォルトでは、エクステンションは `java."
+"net.URLConnection` HTTP クライアントを使用するので、URL 接続クライアントの依存関係を `pom.xml` "
 "ファイルに追加する必要があります。"
 
 #. type: delimited block -
@@ -975,7 +975,8 @@ msgstr "非同期に行く"
 msgid ""
 "Thanks to the AWS SDK v2.x used by the Quarkus extension, you can use the "
 "asynchronous programming model out of the box."
-msgstr "Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
+msgstr ""
+"Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-dynamodb.adoc:389
