--- a/i18n/po/ja_JP/_guides/amazon-lambda.adoc.po
+++ b/i18n/po/ja_JP/_guides/amazon-lambda.adoc.po
@@ -1191,8 +1191,9 @@ msgid ""
 "and set the unix mode of the `bootstrap` script to executable."
 msgstr ""
 "ラムダがネイティブの quarkus ラムダデプロイメントを起動する際に、特定のシステムプロパティやその他の引数を設定したい場合があるかもしれません。 "
-"`zip.native` 内に `bootstrap` スクリプトファイルをインクルードすると、quarkus エクステンションは自動的に実行ファイルの名前を "
-"`function.zip` 内の `runner` に変更し、 `bootstrap` スクリプトの unix モードを実行ファイルに設定します。"
+"`zip.native` 内に `bootstrap` スクリプトファイルをインクルードすると、quarkus "
+"エクステンションは自動的に実行ファイルの名前を `function.zip` 内の `runner` に変更し、 `bootstrap` スクリプトの "
+"unix モードを実行ファイルに設定します。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:464
