--- a/i18n/po/ja_JP/_guides/amazon-ses.adoc.po
+++ b/i18n/po/ja_JP/_guides/amazon-ses.adoc.po
@@ -46,8 +46,8 @@ msgid ""
 "developer-guide/welcome.html[AWS Java SDK 2.x].  It's a major rewrite of the "
 "1.x code base that offers two programming models (Blocking & Async)."
 msgstr ""
-"SESのエクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/"
-"welcome.html[AWS Java SDK 2.x]をベースにしており、2つのプログラミングモデル（Blocking &amp; "
+"SESのエクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-"
+"guide/welcome.html[AWS Java SDK 2.x]をベースにしており、2つのプログラミングモデル（Blocking &amp; "
 "Async）を提供する1.xのコードベースを大幅に書き換えています。"
 
 #. type: Plain text
@@ -362,8 +362,9 @@ msgid ""
 "extension has been added to your `pom.xml` as well as the Mutiny support for "
 "RESTEasy."
 msgstr ""
-"このコマンドは、RESTEasy/JAX-RS、Mutiny、Amazon SES ClientエクステンションをインポートするMaven構造体を生成します。 "
-"`pom.xml` この後、RESTEasyのMutinyサポートと同様に、 `amazon-ses` エクステンションが追加されています。"
+"このコマンドは、RESTEasy/JAX-RS、Mutiny、Amazon SES "
+"ClientエクステンションをインポートするMaven構造体を生成します。 `pom.xml` この後、RESTEasyのMutinyサポートと同様に、 "
+"`amazon-ses` エクステンションが追加されています。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-ses.adoc:116
@@ -616,7 +617,8 @@ msgstr "非同期に行く"
 msgid ""
 "Thanks to the AWS SDK v2.x used by the Quarkus extension, you can use the "
 "asynchronous programming model out of the box."
-msgstr "Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
+msgstr ""
+"Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-ses.adoc:221
