--- a/i18n/po/ja_JP/_guides/amazon-sqs.adoc.po
+++ b/i18n/po/ja_JP/_guides/amazon-sqs.adoc.po
@@ -821,7 +821,8 @@ msgstr "非同期に行く"
 msgid ""
 "Thanks to the AWS SDK v2.x used by the Quarkus extension, you can use the "
 "asynchronous programming model out of the box."
-msgstr "Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
+msgstr ""
+"Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-sqs.adoc:336
