--- a/i18n/po/ja_JP/_guides/building-my-first-extension.adoc.po
+++ b/i18n/po/ja_JP/_guides/building-my-first-extension.adoc.po
@@ -771,8 +771,8 @@ msgid ""
 "application to use the `greeting` extension with all the Quarkus benefits "
 "(build time optimization, native support, etc.)."
 msgstr ""
-"`Build Step Processor` の概念とすべてのエクステンションのデプロイメント API については、後で説明します。この時点では、このクラスは、 "
-"`greeting` "
+"`Build Step Processor` の概念とすべてのエクステンションのデプロイメント API "
+"については、後で説明します。この時点では、このクラスは、 `greeting` "
 "というエクステンションをデプロイする方法をQuarkusに説明していることを理解する必要があります。言い換えれば、アプリケーションを拡張して、 "
 "`greeting` エクステンションを使用して、Quarkusのすべての利点（ビルド時間の最適化、ネイティブサポートなど）を利用することになります。"
 
@@ -1085,8 +1085,9 @@ msgid ""
 "`BuildItem` will be used by Quarkus to display information to the users when "
 "the application is starting."
 msgstr ""
-"`io.quarkus.deployment.builditem.FeatureBuildItem` は、エクステンションの記述を表す `BuildItem` "
-"の実装です。この `BuildItem` は、アプリケーションの起動時にユーザーに情報を表示するためにQuarkusが使用します。"
+"`io.quarkus.deployment.builditem.FeatureBuildItem` は、エクステンションの記述を表す "
+"`BuildItem` の実装です。この `BuildItem` "
+"は、アプリケーションの起動時にユーザーに情報を表示するためにQuarkusが使用します。"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:428
@@ -1681,8 +1682,8 @@ msgid ""
 "is to enable the Maven Surefire remote debugging in order to attach an IDE "
 "`Remote` configuration."
 msgstr ""
-"エクステンションをテストする方法を一緒に見てきましたが、時にはうまくいかず、テストをデバッグしたい場合もあります。ここでも同じ原理で、IDE `Remote` "
-"の設定をアタッチするために Maven Surefire リモートデバッグを有効にするのがコツです。"
+"エクステンションをテストする方法を一緒に見てきましたが、時にはうまくいかず、テストをデバッグしたい場合もあります。ここでも同じ原理で、IDE "
+"`Remote` の設定をアタッチするために Maven Surefire リモートデバッグを有効にするのがコツです。"
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:715
@@ -1916,8 +1917,8 @@ msgid ""
 "forum/#!forum/quarkus-dev[Quarkus Google Group] and wait for an official "
 "invitation to join the Quarkus Platform."
 msgstr ""
-"今のところ、新しいエクステンションを提案するプロセスはまだ定義されていません。最良のチャンスは、 link:https://groups.google.com/"
-"forum/#!forum/quarkus-dev[Quarkus Googleグループ]でエクステンションを提案し、Quarkus "
+"今のところ、新しいエクステンションを提案するプロセスはまだ定義されていません。最良のチャンスは、 link:https://groups.google."
+"com/forum/#!forum/quarkus-dev[Quarkus Googleグループ]でエクステンションを提案し、Quarkus "
 "Platformへの正式な招待状が届くのを待つことです。"
 
 #. type: Title ==
