--- a/i18n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/i18n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -1251,7 +1251,8 @@ msgstr ""
 msgid ""
 "Furthermore, extensions can eliminate possible false positives by producing "
 "`UnremovableBeanBuildItem`."
-msgstr "さらに、エクステンションは `UnremovableBeanBuildItem` を生成することで、可能性のある誤検出を排除することができます。"
+msgstr ""
+"さらに、エクステンションは `UnremovableBeanBuildItem` を生成することで、可能性のある誤検出を排除することができます。"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:438
