--- a/i18n/po/ja_JP/_guides/credentials-provider.adoc.po
+++ b/i18n/po/ja_JP/_guides/credentials-provider.adoc.po
@@ -55,8 +55,8 @@ msgid ""
 msgstr ""
 "さまざまな形式をとることができるクレデンシャルを消費するデータストアと、それらのクレデンシャルを提供する安全なストアの橋渡しをするために、Quarkusでは、 "
 "`Credentials Provider` "
-"と呼ばれる中間的な抽象化を導入しています。これは、一部のエクステンションがクレデンシャルを消費するためにサポートしている場合もあれば（例： `agroal` "
-"）、クレデンシャルを生成するために実装している場合もあります（例： `vault` ）。"
+"と呼ばれる中間的な抽象化を導入しています。これは、一部のエクステンションがクレデンシャルを消費するためにサポートしている場合もあれば（例： "
+"`agroal` ）、クレデンシャルを生成するために実装している場合もあります（例： `vault` ）。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:27
