--- a/i18n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/i18n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -851,8 +851,8 @@ msgid ""
 "variable `MY_ENV_VAR=newValue` and issue a warning."
 msgstr ""
 "例えば、 `quarkus.kubernetes.env-vars.my-env-var.value=foobar` と `quarkus."
-"kubernetes.env.vars.my-env-var=newValue` の両方を定義した場合、エクステンションは環境変数 `MY_ENV_VAR="
-"newValue` *のみ*を生成して警告を発します。"
+"kubernetes.env.vars.my-env-var=newValue` の両方を定義した場合、エクステンションは環境変数 "
+"`MY_ENV_VAR=newValue` *のみ*を生成して警告を発します。"
 
 #. type: Title ====
 #: upstream/_guides/deploying-to-kubernetes.adoc:408
@@ -1171,8 +1171,8 @@ msgid ""
 "yaml` and `minikube.json`) that are tailored to Minikube.  This extension "
 "assumes a couple things:"
 msgstr ""
-"このエクステンションの目的は、Minikube に合わせた Kubernetes マニフェスト ( `minikube.yaml` と `minikube."
-"json`) を生成することです。このエクステンションはいくつかのことを前提としています。"
+"このエクステンションの目的は、Minikube に合わせた Kubernetes マニフェスト ( `minikube.yaml` と "
+"`minikube.json`) を生成することです。このエクステンションはいくつかのことを前提としています。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:551
@@ -1234,9 +1234,9 @@ msgid ""
 "vanilla Kubernetes manifests (or the OpenShift ones when targeting "
 "OpenShift)."
 msgstr ""
-"本番環境へのデプロイ時に Minikube エクステンションで生成されたマニフェストを使用することは非常にお勧めできません。本番環境にデプロイする場合は、バニラ "
-"Kubernetes マニフェスト (または OpenShift をターゲットにしている場合は OpenShift マニフェスト) "
-"の使用を検討してください。"
+"本番環境へのデプロイ時に Minikube "
+"エクステンションで生成されたマニフェストを使用することは非常にお勧めできません。本番環境にデプロイする場合は、バニラ Kubernetes マニフェスト "
+"(または OpenShift をターゲットにしている場合は OpenShift マニフェスト) の使用を検討してください。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:573
@@ -1246,8 +1246,8 @@ msgid ""
 "nothing prevents you from using the regular Kubernetes extension to generate "
 "Kubernetes manifests and apply those to your Minikube cluster."
 msgstr ""
-"Minikube エクステンションが想定している前提がワークフローに合わない場合、通常の Kubernetes エクステンションを使用して Kubernetes "
-"マニフェストを生成し、それを Minikube クラスタに適用することを妨げるものは何もありません。"
+"Minikube エクステンションが想定している前提がワークフローに合わない場合、通常の Kubernetes エクステンションを使用して "
+"Kubernetes マニフェストを生成し、それを Minikube クラスタに適用することを妨げるものは何もありません。"
 
 #. type: Title ==
 #: upstream/_guides/deploying-to-kubernetes.adoc:574
