--- a/i18n/po/ja_JP/_guides/funqy-knative-events.adoc.po
+++ b/i18n/po/ja_JP/_guides/funqy-knative-events.adoc.po
@@ -394,8 +394,8 @@ msgid ""
 "The Funqy Knative Events extension also has annotations to do this Cloud "
 "Event mapping to your functions.  Take a look at the `annotatedChain` method"
 msgstr ""
-"Funqy Knative Events エクステンションには、この Cloud Event の関数へのマッピングを行うためのアノテーションも用意されています。 "
-"`annotatedChain` メソッドを見てみましょう。"
+"Funqy Knative Events エクステンションには、この Cloud Event "
+"の関数へのマッピングを行うためのアノテーションも用意されています。 `annotatedChain` メソッドを見てみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/funqy-knative-events.adoc:131
