--- a/i18n/po/ja_JP/_guides/getting-started-reactive.adoc.po
+++ b/i18n/po/ja_JP/_guides/getting-started-reactive.adoc.po
@@ -751,8 +751,8 @@ msgid ""
 "Mutiny support for RESTEasy extension (`io.quarkus:quarkus-resteasy-mutiny`) "
 "is present, otherwise add the extension by executing the following command:"
 msgstr ""
-"JAX-RSリソースでMutinyを正しく動作させるためには、RESTEasyエクステンションのMutinyサポート( `io.quarkus:quarkus-"
-"resteasy-mutiny`)が存在することを確認してください。"
+"JAX-RSリソースでMutinyを正しく動作させるためには、RESTEasyエクステンションのMutinyサポート( `io.quarkus:"
+"quarkus-resteasy-mutiny`)が存在することを確認してください。"
 
 #. type: delimited block -
 #: upstream/_guides/getting-started-reactive.adoc:301
@@ -1402,7 +1402,8 @@ msgid ""
 "First of all, make sure the `quarkus-vertx` extension is present. If not, "
 "activate the extension by executing the following command:"
 msgstr ""
-"まず、 `quarkus-vertx` の拡張子が存在することを確認してください。存在しない場合は、以下のコマンドを実行してエクステンションを有効にします。"
+"まず、 `quarkus-vertx` "
+"の拡張子が存在することを確認してください。存在しない場合は、以下のコマンドを実行してエクステンションを有効にします。"
 
 #. type: delimited block -
 #: upstream/_guides/getting-started-reactive.adoc:621
