--- a/i18n/po/ja_JP/_guides/infinispan-client.adoc.po
+++ b/i18n/po/ja_JP/_guides/infinispan-client.adoc.po
@@ -891,8 +891,8 @@ msgid ""
 "The Infinispan Client extension enables SSL by default. You can read more "
 "about this at link:native-and-ssl[Using SSL With Native Executables]."
 msgstr ""
-"Infinispanクライアントエクステンションは、デフォルトでSSLを有効にします。これについての詳細は link:native-and-ssl[Using "
-"SSL With Native Executables] を参照してください。"
+"Infinispanクライアントエクステンションは、デフォルトでSSLを有効にします。これについての詳細は link:native-and-"
+"ssl[Using SSL With Native Executables] を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:389
