--- a/i18n/po/ja_JP/_guides/jgit.adoc.po
+++ b/i18n/po/ja_JP/_guides/jgit.adoc.po
@@ -49,7 +49,8 @@ msgid ""
 "extension to your project by running the following command in your project "
 "base directory."
 msgstr ""
-"Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマンドを実行して、 `jgit` エクステンションをプロジェクトに追加できます。"
+"Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマンドを実行して、 `jgit` "
+"エクステンションをプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/jgit.adoc:22
