--- a/i18n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/i18n/po/ja_JP/_guides/mongodb.adoc.po
@@ -1307,8 +1307,8 @@ msgid ""
 "with Panache] and focuses on making your entities trivial and fun to write "
 "in Quarkus."
 msgstr ""
-"link:mongodb-panache[MongoDB with Panache]エクステンションは、 link:hibernate-orm-panache."
-"html[Hibernate ORM with "
+"link:mongodb-panache[MongoDB with Panache]エクステンションは、 link:hibernate-orm-"
+"panache.html[Hibernate ORM with "
 "Panacheの]ようなアクティブなレコードスタイルのエンティティ（とリポジトリ）を提供することでMongoDBの使用を容易にし、エンティティをQuarkusで書くのが簡単で楽しいものにすることに重点を置いています。"
 
 #. type: Title ==
