--- a/i18n/po/ja_JP/_guides/native-and-ssl.adoc.po
+++ b/i18n/po/ja_JP/_guides/native-and-ssl.adoc.po
@@ -338,7 +338,8 @@ msgstr "PostgreSQL拡張用のReactiveクライアント ( `quarkus-reactive-pg-
 #, fuzzy
 msgid ""
 "the Reactive client for MySQL extension (`quarkus-reactive-mysql-client`),"
-msgstr "MySQL エクステンションのための Reactive クライアント ( `quarkus-reactive-mysql-client`)。"
+msgstr ""
+"MySQL エクステンションのための Reactive クライアント ( `quarkus-reactive-mysql-client`)。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:95
