--- a/i18n/po/ja_JP/_guides/opentracing.adoc.po
+++ b/i18n/po/ja_JP/_guides/opentracing.adoc.po
@@ -161,7 +161,8 @@ msgid ""
 "and the default https://www.jaegertracing.io/[Jaeger] tracer."
 msgstr ""
 "このコマンドは、REST エンドポイントを持つ Maven プロジェクトを生成し、OpenTracing サポートとデフォルトの link:https:/"
-"/www.jaegertracing.io/[Jaeger]トレーサーを含む `smallrye-opentracing` エクステンションをインポートします。"
+"/www.jaegertracing.io/[Jaeger]トレーサーを含む `smallrye-opentracing` "
+"エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:58
