--- a/i18n/po/ja_JP/_guides/redis.adoc.po
+++ b/i18n/po/ja_JP/_guides/redis.adoc.po
@@ -31,7 +31,8 @@ msgstr "Quarkus - Redisクライアントを使用する"
 msgid ""
 "This guide demonstrates how your Quarkus application can connect to a Redis "
 "server using the Redis Client extension."
-msgstr "このガイドでは、QuarkusアプリケーションがRedisクライアントエクステンションを使用してRedisサーバーに接続する方法を説明します。"
+msgstr ""
+"このガイドでは、QuarkusアプリケーションがRedisクライアントエクステンションを使用してRedisサーバーに接続する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_guides/redis.adoc:14
@@ -109,8 +110,8 @@ msgid ""
 "vertx-redis-client/java/[Vert.x Redis Client], providing an asynchronous and "
 "non-blocking way to connect to Redis."
 msgstr ""
-"今回は、Quarkus Redis Clientエクステンションを使用して、Redisサーバーに接続します。このエクステンションは link:https://vertx."
-"io/docs/vertx-redis-client/java/[Vert.x Redis "
+"今回は、Quarkus Redis Clientエクステンションを使用して、Redisサーバーに接続します。このエクステンションは link:https:"
+"//vertx.io/docs/vertx-redis-client/java/[Vert.x Redis "
 "Client]の上に実装されており、非同期かつノンブロッキングでRedisに接続する方法を提供します。"
 
 #. type: Title ==
