--- a/i18n/po/ja_JP/_guides/rest-data-panache.adoc.po
+++ b/i18n/po/ja_JP/_guides/rest-data-panache.adoc.po
@@ -85,8 +85,8 @@ msgid ""
 "A JDBC driver extension (`quarkus-jdbc-postgresql`, `quarkus-jdbc-h2`, "
 "`quarkus-jdbc-mariadb`, ...)"
 msgstr ""
-"JDBC ドライバのエクステンション ( `quarkus-jdbc-postgresql`, `quarkus-jdbc-h2`, `quarkus-jdbc-"
-"mariadb`, ...)"
+"JDBC ドライバのエクステンション ( `quarkus-jdbc-postgresql`, `quarkus-jdbc-h2`, `quarkus-"
+"jdbc-mariadb`, ...)"
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:27
@@ -95,8 +95,8 @@ msgid ""
 "One of the RESTEasy JSON serialization extensions (`quarkus-resteasy-"
 "jackson` or `quarkus-resteasy-jsonb`)"
 msgstr ""
-"RESTEasy JSON シリアライゼーションエクステンションの一つ ( `quarkus-resteasy-jackson` または `quarkus-"
-"resteasy-jsonb`)"
+"RESTEasy JSON シリアライゼーションエクステンションの一つ ( `quarkus-resteasy-jackson` または "
+"`quarkus-resteasy-jsonb`)"
 
 #. type: delimited block -
 #: upstream/_guides/rest-data-panache.adoc:44
