--- a/i18n/po/ja_JP/_guides/rest-json.adoc.po
+++ b/i18n/po/ja_JP/_guides/rest-json.adoc.po
@@ -1385,7 +1385,8 @@ msgid ""
 "default charset (if none is specified in your request) is UTF-8 rather than "
 "US-ASCII."
 msgstr ""
-"このエクステンションは、デフォルトの文字セットが US-ASCII ではなく UTF-8 であるため、RESTEasy のデフォルトの動作とは若干異なります。"
+"このエクステンションは、デフォルトの文字セットが US-ASCII ではなく UTF-8 であるため、RESTEasy "
+"のデフォルトの動作とは若干異なります。"
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:539
