--- a/i18n/po/ja_JP/_guides/scheduler-reference.adoc.po
+++ b/i18n/po/ja_JP/_guides/scheduler-reference.adoc.po
@@ -38,10 +38,10 @@ msgid ""
 "use cases, such as persistent tasks, clustering and programmatic scheduling "
 "of jobs."
 msgstr ""
-"最近のアプリケーションでは、定期的に特定のタスクを実行する必要があります。Quarkusには2つのスケジューラエクステンションがあります。 `quarkus-"
-"scheduler` エクステンションには、APIと軽量なインメモリスケジューラの実装が含まれています。 `quarkus-quartz` エクステンションは、 "
-"`quarkus-scheduler` エクステンションのAPIを実装し、Quartzライブラリをベースにしたスケジューラの実装が含まれています。 "
-"`quarkus-quartz` "
+"最近のアプリケーションでは、定期的に特定のタスクを実行する必要があります。Quarkusには2つのスケジューラエクステンションがあります。 "
+"`quarkus-scheduler` エクステンションには、APIと軽量なインメモリスケジューラの実装が含まれています。 `quarkus-"
+"quartz` エクステンションは、 `quarkus-scheduler` "
+"エクステンションのAPIを実装し、Quartzライブラリをベースにしたスケジューラの実装が含まれています。 `quarkus-quartz` "
 "が必要になるのは、持続的タスク、クラスタリング、ジョブのプログラマティックスケジューリングなど、より高度なスケジューリングのユースケースのみです。"
 
 #. type: Plain text
