--- a/i18n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
@@ -548,9 +548,9 @@ msgid ""
 "`service` type application (see `quarkus.oidc.application-type`). This "
 "extension currently supports only such `service` type applications."
 msgstr ""
-"デフォルトでは、 `quarkus-oidc` エクステンションを使用するアプリケーションは `service` タイプのアプリケーションとしてマークされます "
-"( `quarkus.oidc.application-type` を参照)。このエクステンションは現在、そのような `service` "
-"タイプのアプリケーションのみをサポートしています。"
+"デフォルトでは、 `quarkus-oidc` エクステンションを使用するアプリケーションは `service` "
+"タイプのアプリケーションとしてマークされます ( `quarkus.oidc.application-type` "
+"を参照)。このエクステンションは現在、そのような `service` タイプのアプリケーションのみをサポートしています。"
 
 #. type: Title ==
 #: upstream/_guides/security-keycloak-authorization.adoc:194
