--- a/i18n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -262,8 +262,8 @@ msgid ""
 "the `application.properties` file which should be located at the `src/main/"
 "resources` directory."
 msgstr ""
-"OpenID Connect エクステンションを使用すると、 `application.properties` ファイルを使用して設定を定義することができます。 "
-"`src/main/resources` ディレクトリにあるはずの ファイルを使用してください。"
+"OpenID Connect エクステンションを使用すると、 `application.properties` "
+"ファイルを使用して設定を定義することができます。 `src/main/resources` ディレクトリにあるはずの ファイルを使用してください。"
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:82
