--- a/i18n/po/ja_JP/_guides/vertx.adoc.po
+++ b/i18n/po/ja_JP/_guides/vertx.adoc.po
@@ -69,8 +69,8 @@ msgid ""
 "feature.  If you are creating a new project, set the `extensions` parameter "
 "are follows:"
 msgstr ""
-"Vert.xにアクセスするには、まあ、この機能を利用するには、 `vertx` エクステンションを有効にする必要があります。新規プロジェクトを作成する場合は、 "
-"`extensions` パラメータを以下のように設定します。"
+"Vert.xにアクセスするには、まあ、この機能を利用するには、 `vertx` "
+"エクステンションを有効にする必要があります。新規プロジェクトを作成する場合は、 `extensions` パラメータを以下のように設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/vertx.adoc:32
@@ -90,8 +90,8 @@ msgid ""
 "If you have an already created project, the `vertx` extension can be added "
 "to an existing Quarkus project with the `add-extension` command:"
 msgstr ""
-"すでに作成済みのプロジェクトがある場合は、 `vertx` エクステンションを既存のQuarkusプロジェクトに追加するには、 `add-extension` "
-"コマンドを使用します。"
+"すでに作成済みのプロジェクトがある場合は、 `vertx` エクステンションを既存のQuarkusプロジェクトに追加するには、 `add-"
+"extension` コマンドを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/vertx.adoc:40
