--- a/i18n/po/ja_JP/_guides/writing-native-applications-tips.adoc.po
+++ b/i18n/po/ja_JP/_guides/writing-native-applications-tips.adoc.po
@@ -799,7 +799,8 @@ msgid ""
 "In the context of an extension, Quarkus eliminates the need for a JSON "
 "configuration file by allowing extension authors to specify a "
 "`NativeImageResourceBuildItem`:"
-msgstr "エクステンションのコンテキストでは、Quarkusは、エクステンションの作成者が `NativeImageResourceBuildItem`."
+msgstr ""
+"エクステンションのコンテキストでは、Quarkusは、エクステンションの作成者が `NativeImageResourceBuildItem`."
 
 #. type: delimited block -
 #: upstream/_guides/writing-native-applications-tips.adoc:345
