--- a/i18n/po/ja_JP/_posts/2019-06-26-kafka-streams-applications-with-quarkus-and-microprofile.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-06-26-kafka-streams-applications-with-quarkus-and-microprofile.adoc.po
@@ -813,8 +813,8 @@ msgid ""
 "file, starting the pipeline and automatically exposing healthchecks and "
 "metrics."
 msgstr ""
-"これにより、実際のパイプラインロジックの実装に集中でき、Quarkusエクステンションは、Quarkus `application.properties` "
-"ファイルに基づいてKafka "
+"これにより、実際のパイプラインロジックの実装に集中でき、Quarkusエクステンションは、Quarkus `application."
+"properties` ファイルに基づいてKafka "
 "Streamsを設定したり、パイプラインを開始したり、ヘルスチェックやメトリクスを自動的に公開したりと、他のすべての作業を行うことができます。"
 
 #. type: Plain text
