--- a/i18n/po/ja_JP/_posts/2019-07-11-quarkus-0-19.1-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-07-11-quarkus-0-19.1-released.adoc.po
@@ -244,7 +244,8 @@ msgid ""
 msgstr ""
 "link:http://tika.apache.org/[Apache "
 "Tikaは]、ドキュメント（特にPDFドキュメントなどのバイナリのもの）からデータを抽出するためのフレームワークです。Apache Tika "
-"Quarkusエクステンションを使えば、 `TikaParser` を注入するだけで、ドキュメントから情報を抽出することができます。はい、ネイティブモードでも。"
+"Quarkusエクステンションを使えば、 `TikaParser` "
+"を注入するだけで、ドキュメントから情報を抽出することができます。はい、ネイティブモードでも。"
 
 #. type: Title ====
 #: upstream/_posts/2019-07-11-quarkus-0-19.1-released.adoc:64
