--- a/i18n/po/ja_JP/_posts/2019-07-31-quarkus-0-20-0-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-07-31-quarkus-0-20-0-released.adoc.po
@@ -71,8 +71,9 @@ msgid ""
 "MicroProfile REST Client implementation, Syslog support and a new guide for "
 "Azure deployments."
 msgstr ""
-"今回のリリースの主なハイライトは以下の通りです。Jackson エクステンション、OAuth2 エクステンション、Quarkus ツリーの外に移動した Camel "
-"エクステンション、新しい MicroProfile REST クライアントの実装、Syslog のサポート、Azure デプロイメントのための新しいガイドです。"
+"今回のリリースの主なハイライトは以下の通りです。Jackson エクステンション、OAuth2 エクステンション、Quarkus ツリーの外に移動した "
+"Camel エクステンション、新しい MicroProfile REST クライアントの実装、Syslog のサポート、Azure "
+"デプロイメントのための新しいガイドです。"
 
 #. type: Title ===
 #: upstream/_posts/2019-07-31-quarkus-0-20-0-released.adoc:20
