--- a/i18n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
@@ -196,7 +196,8 @@ msgstr "良いニュースは決して一人では来ないように、それは
 msgid ""
 "`quarkus-jdbc-mysql` - An extension for the official MySQL JDBC driver you "
 "can use with Hibernate ORM"
-msgstr "`quarkus-jdbc-mysql` - Hibernate ORM で使用できる公式 MySQL JDBC ドライバのエクステンション"
+msgstr ""
+"`quarkus-jdbc-mysql` - Hibernate ORM で使用できる公式 MySQL JDBC ドライバのエクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:56
@@ -218,9 +219,9 @@ msgid ""
 "apache.org/components/artemis/[ActiveMQ Artemis], in the form of the "
 "`quarkus-artemis-core` and `quarkus-artemis-jms` extensions."
 msgstr ""
-"メッセージングに興味のある方には、 `quarkus-artemis-core` と `quarkus-artemis-jms` のエクステンションの形で、 "
-"link:https://activemq.apache.org/components/artemis/[ActiveMQ Artemis] "
-"という選択肢がもう一つあります。"
+"メッセージングに興味のある方には、 `quarkus-artemis-core` と `quarkus-artemis-jms` "
+"のエクステンションの形で、 link:https://activemq.apache.org/components/artemis/[ActiveMQ "
+"Artemis] という選択肢がもう一つあります。"
 
 #. type: Title ====
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:61
@@ -235,8 +236,8 @@ msgid ""
 "We have added an extension for JGit: say hello to `quarkus-jgit`. More "
 "information in the https://quarkus.io/guides/jgit[JGit extension guide]."
 msgstr ""
-"JGit 用のエクステンションを追加しました: say hello to `quarkus-jgit`.詳細は link:https://quarkus.io/"
-"guides/jgit[JGit エクステンションガイド] を参照してください。"
+"JGit 用のエクステンションを追加しました: say hello to `quarkus-jgit`.詳細は link:https://quarkus."
+"io/guides/jgit[JGit エクステンションガイド] を参照してください。"
 
 #. type: Title ===
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:65
