--- a/i18n/po/ja_JP/_posts/2019-10-12-quarkus-0-24.0-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-10-12-quarkus-0-24.0-released.adoc.po
@@ -157,7 +157,8 @@ msgid ""
 "HTTP Authentication is now handled at the Vert.x layer. Previously this was "
 "configured in the Elytron extensions, this configuration has been removed"
 msgstr ""
-"HTTP 認証は Vert.x レイヤーで処理されるようになりました。以前は Elytron エクステンションで設定されていましたが、この設定は削除されました。"
+"HTTP 認証は Vert.x レイヤーで処理されるようになりました。以前は Elytron "
+"エクステンションで設定されていましたが、この設定は削除されました。"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-12-quarkus-0-24.0-released.adoc:34
@@ -182,7 +183,8 @@ msgid ""
 "the next release."
 msgstr ""
 "データベースからユーザーをロードできるようにする link:https://quarkus.io/guides/security-jdbc[新しい "
-"`elytron-security-jdbc` エクステンション]があります。このエクステンションはまだアルファ版であり、次のリリースでは設定が簡略化されるでしょう。"
+"`elytron-security-jdbc` "
+"エクステンション]があります。このエクステンションはまだアルファ版であり、次のリリースでは設定が簡略化されるでしょう。"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-12-quarkus-0-24.0-released.adoc:36
@@ -428,8 +430,8 @@ msgid ""
 "your REST services, please use the `quarkus-resteasy-jaxb` extension from "
 "now on."
 msgstr ""
-"RESTEasyのJAXBエクステンションがちゃんとしたものになりました。なので、RESTサービスでJAXBを使っている方は、これからは `quarkus-"
-"resteasy-jaxb` のエクステンションを使ってください。"
+"RESTEasyのJAXBエクステンションがちゃんとしたものになりました。なので、RESTサービスでJAXBを使っている方は、これからは "
+"`quarkus-resteasy-jaxb` のエクステンションを使ってください。"
 
 #. type: Title ====
 #: upstream/_posts/2019-10-12-quarkus-0-24.0-released.adoc:95
