--- a/i18n/po/ja_JP/_posts/2019-10-30-quarkus-0-27-0-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-10-30-quarkus-0-27-0-released.adoc.po
@@ -211,9 +211,9 @@ msgid ""
 "via our central `application.properties`: learn more about it in link:/"
 "guides/kubernetes-resources[the updated documentation]."
 msgstr ""
-"Kubernetes エクステンションにいくつかの改良が加えられたおかげで、Kubernetes マニフェストをカスタマイズする方法がより柔軟になりました "
-"`application.properties`: 詳細は link:/guides/kubernetes-"
-"resources[更新されたドキュメントを]参照してください。"
+"Kubernetes エクステンションにいくつかの改良が加えられたおかげで、Kubernetes "
+"マニフェストをカスタマイズする方法がより柔軟になりました `application.properties`: 詳細は link:/guides/"
+"kubernetes-resources[更新されたドキュメントを]参照してください。"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-30-quarkus-0-27-0-released.adoc:57
