--- a/i18n/po/ja_JP/_posts/2019-11-04-quarkus-0-28-1-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-11-04-quarkus-0-28-1-released.adoc.po
@@ -129,8 +129,9 @@ msgid ""
 "core. That is visible on https://code.quarkus.io[code.quarkus.io] where you "
 "can find additional Quarkus extensions such as Apache Camel."
 msgstr ""
-"Quarkusのエコシステムは、Quarkusコアでリリースされたエクステンションだけではありません。これは link:https://code.quarkus."
-"io[code.quarkus.io]で見ることができ、Apache Camelなどの追加のQuarkusエクステンションを見つけることができます。"
+"Quarkusのエコシステムは、Quarkusコアでリリースされたエクステンションだけではありません。これは link:https://code."
+"quarkus.io[code.quarkus.io]で見ることができ、Apache "
+"Camelなどの追加のQuarkusエクステンションを見つけることができます。"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-04-quarkus-0-28-1-released.adoc:33
