--- a/i18n/po/ja_JP/_posts/2019-11-08-quarkus-for-spring-developers.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-11-08-quarkus-for-spring-developers.adoc.po
@@ -186,7 +186,8 @@ msgid ""
 "context. For these reasons, attempting to utilize additional Spring "
 "libraries will likely not work."
 msgstr ""
-"Spring Frameworkは、その性質上、非常に動的なものです。これに対応するために、QuarkusのSpring互換性エクステンションでは、Spring "
+"Spring "
+"Frameworkは、その性質上、非常に動的なものです。これに対応するために、QuarkusのSpring互換性エクステンションでは、Spring "
 "APIを既存のエクステンションのAPIにマッピングしており、RestEasyやCDIのように、高速起動、メモリ使用量の削減、ネイティブコンパイルのためにすでに最適化されています。また、Quarkus "
 "Spring互換性エクステンションは、Springアプリケーションコンテキストを利用しません。これらの理由から、追加のSpringライブラリを利用しようとしても、おそらくうまくいかないでしょう。"
 
