--- a/i18n/po/ja_JP/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc.po
@@ -257,8 +257,9 @@ msgid ""
 "monitoring. Note that, https://quarkus.io/guides/logging-sentry[as stated in "
 "our documentation], Sentry is not open source anymore."
 msgstr ""
-"アプリケーションの例外を監視できるように、 `logging-sentry` エクステンションが追加されました。 link:https://quarkus.io/"
-"guides/logging-sentry[ドキュメントに記載されているように、]Sentry はもうオープンソースではないことに注意してください。"
+"アプリケーションの例外を監視できるように、 `logging-sentry` エクステンションが追加されました。 link:https://"
+"quarkus.io/guides/logging-sentry[ドキュメントに記載されているように、]Sentry "
+"はもうオープンソースではないことに注意してください。"
 
 #. type: Title ===
 #: upstream/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc:57
@@ -343,8 +344,8 @@ msgid ""
 "to provide support for clustered jobs and it has https://quarkus.io/guides/"
 "quartz[its own guide and quickstart]."
 msgstr ""
-"これは人気のある要件だったので、1.1ではクラスタ化されたジョブのサポートを提供するために `quartz` エクステンションが追加され、 link:https:"
-"//quarkus.io/guides/quartz[独自のガイドとクイックスタートが]用意されています。"
+"これは人気のある要件だったので、1.1ではクラスタ化されたジョブのサポートを提供するために `quartz` エクステンションが追加され、 link:"
+"https://quarkus.io/guides/quartz[独自のガイドとクイックスタートが]用意されています。"
 
 #. type: Title ===
 #: upstream/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc:78
