--- a/i18n/po/ja_JP/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc.po
@@ -429,7 +429,8 @@ msgstr "キューピッドジェイエムエス"
 msgid ""
 "We now recommend the usage of the Qpid JMS extension instead of the Artemis "
 "JMS one.  Features are the same, it just adds more flexibility."
-msgstr "現在、Artemis JMSの代わりにQpid JMSエクステンションの使用を推奨しています。機能は同じですが、より柔軟性が増しただけです。"
+msgstr ""
+"現在、Artemis JMSの代わりにQpid JMSエクステンションの使用を推奨しています。機能は同じですが、より柔軟性が増しただけです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc:124
