--- a/i18n/po/ja_JP/_posts/2020-04-27-quarkus-1-4-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-04-27-quarkus-1-4-final-released.adoc.po
@@ -359,7 +359,8 @@ msgstr "以前のバージョンでは、Keycloak Admin Clientにいくつかの
 msgid ""
 "We added a dedicated extension called `quarkus-keycloak-admin-client` to "
 "ensure a smooth experience."
-msgstr "スムーズにご利用いただけるように、 `quarkus-keycloak-admin-client` という専用のエクステンションを追加しました。"
+msgstr ""
+"スムーズにご利用いただけるように、 `quarkus-keycloak-admin-client` という専用のエクステンションを追加しました。"
 
 #. type: Title ====
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:94
