--- a/i18n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
@@ -706,8 +706,8 @@ msgid ""
 "extensions. The extension works by reading ConfigMaps directly from the "
 "Kubernetes API."
 msgstr ""
-"アプリケーションのブーストラッピング中に、 `kubernetes-config` エクステンションを追加しました。このエクステンションは、Kubernetes API "
-"から ConfigMaps を直接読み込むことで動作します。"
+"アプリケーションのブーストラッピング中に、 `kubernetes-config` "
+"エクステンションを追加しました。このエクステンションは、Kubernetes API から ConfigMaps を直接読み込むことで動作します。"
 
 #. type: delimited block =
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:297
