--- a/i18n/po/ja_JP/_posts/2020-07-08-quarkus-1-6-0-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-07-08-quarkus-1-6-0-final-released.adoc.po
@@ -249,7 +249,8 @@ msgid ""
 "Although this feature is experimental and still needs to be integrated "
 "properly with the container-image generation extensions, it nevertheless is "
 "fully functional."
-msgstr "この機能は実験的なものであり、まだコンテナイメージ生成エクステンションと適切に統合する必要がありますが、それにもかかわらず完全に機能します。"
+msgstr ""
+"この機能は実験的なものであり、まだコンテナイメージ生成エクステンションと適切に統合する必要がありますが、それにもかかわらず完全に機能します。"
 
 #. type: Title ====
 #: upstream/_posts/2020-07-08-quarkus-1-6-0-final-released.adoc:63
