--- a/i18n/po/ja_JP/_posts/2020-08-13-quarkus-1-7-0-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-08-13-quarkus-1-7-0-final-released.adoc.po
@@ -333,7 +333,8 @@ msgstr "Db2 JDBCドライバ"
 msgid ""
 "In 1.6, we included support for the reactive Db2 driver.  1.7 brings a new "
 "extension for the Db2 JDBC driver."
-msgstr "1.6では、反応性のあるDb2ドライバのサポートが含まれていた。1.7 では、Db2 JDBC ドライバの新しいエクステンションが追加されました。"
+msgstr ""
+"1.6では、反応性のあるDb2ドライバのサポートが含まれていた。1.7 では、Db2 JDBC ドライバの新しいエクステンションが追加されました。"
 
 #. type: Title ===
 #: upstream/_posts/2020-08-13-quarkus-1-7-0-final-released.adoc:87
