--- a/i18n/po/ja_JP/_posts/2020-08-19-openapi-for-everyone.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-08-19-openapi-for-everyone.adoc.po
@@ -508,8 +508,9 @@ msgid ""
 "this by adding this in `application.properties`:"
 msgstr ""
 "APIゲートウェイによっては、動作するために特定のOpenAPIのバージョンが必要な場合があります。SmallRye "
-"エクステンションによって生成されるスキーマドキュメントは `3.0.3` をバージョンとして生成しますが、これらのバージョン間にはわずかな違いしかないので、 "
-"`3.0.0`, `3.0.1`, `3.0.2` に変更することができます。これは、 `application.properties`."
+"エクステンションによって生成されるスキーマドキュメントは `3.0.3` "
+"をバージョンとして生成しますが、これらのバージョン間にはわずかな違いしかないので、 `3.0.0`, `3.0.1`, `3.0.2` "
+"に変更することができます。これは、 `application.properties`."
 
 #. type: delimited block -
 #: upstream/_posts/2020-08-19-openapi-for-everyone.adoc:286
