--- a/i18n/po/ja_JP/_posts/2020-08-20-codestarts-preview.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-08-20-codestarts-preview.adoc.po
@@ -222,7 +222,8 @@ msgstr ""
 msgid ""
 "We added instructions to get you started (contextual to the extensions and "
 "build tool you've selected) in the new project `README.md` ."
-msgstr "新しいプロジェクト `README.md` に、（選択したエクステンションとビルドツールの文脈に沿って）使い始めるための手順を追加しました。"
+msgstr ""
+"新しいプロジェクト `README.md` に、（選択したエクステンションとビルドツールの文脈に沿って）使い始めるための手順を追加しました。"
 
 #. type: Title ==
 #: upstream/_posts/2020-08-20-codestarts-preview.adoc:87
