--- a/i18n/po/ja_JP/_posts/2020-09-02-mutiny-redis.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-09-02-mutiny-redis.adoc.po
@@ -141,8 +141,8 @@ msgid ""
 "exposes a similar API. Enrico wanted to use the Vert.x Redis Client directly."
 ""
 msgstr ""
-"Quarkusでは、同様のAPIを公開しているRedisエクステンションを直接使用する必要があることに注意してください。EnricoはVert.x Redis "
-"Clientを直接使いたいと考えていました。"
+"Quarkusでは、同様のAPIを公開しているRedisエクステンションを直接使用する必要があることに注意してください。EnricoはVert.x "
+"Redis Clientを直接使いたいと考えていました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:43
