--- a/i18n/po/ja_JP/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc.po
@@ -59,7 +59,8 @@ msgid ""
 "We also introduced a new RESTEasy Multipart extension to fix an recurring "
 "encoding issues with multipart."
 msgstr ""
-"また、新しい RESTEasy Multipart エクステンションを導入し、multipart で繰り返し発生するエンコーディングの問題を修正しました。"
+"また、新しい RESTEasy Multipart エクステンションを導入し、multipart "
+"で繰り返し発生するエンコーディングの問題を修正しました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:15
