--- a/i18n/po/ja_JP/_posts/2020-10-05-contributing-for-the-first-time.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-10-05-contributing-for-the-first-time.adoc.po
@@ -132,8 +132,8 @@ msgid ""
 msgstr ""
 "その後、Devoxx FranceでQuarkusのコアメンバーであるEmmanuel Bernard氏とClement "
 "Escoffier氏に会う機会があり、MongoDBについて長い議論をした後、いくつかのメールのやり取りをしました。この後、私はMongo "
-"Clientエクステンション（Clément Escoffier氏が執筆）のテストを手伝いました。+ このすべてが Panache エクステンションを使った "
-"MongoDB の作成につながり、設計、コーディング、再コーディング、ドキュメント作成などの大仕事になりました。"
+"Clientエクステンション（Clément Escoffier氏が執筆）のテストを手伝いました。+ このすべてが Panache "
+"エクステンションを使った MongoDB の作成につながり、設計、コーディング、再コーディング、ドキュメント作成などの大仕事になりました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-05-contributing-for-the-first-time.adoc:33
@@ -332,9 +332,9 @@ msgid ""
 "  Extension contribution is a long process with a design phase, and a "
 "discussion phase prior to any implementation."
 msgstr ""
-"新しいエクステンションを作りたいのであれば、おめでとうございます!しかし、メーリングリストで質問したり、github で link:https://github."
-"com/quarkusio/quarkus/issues/new?assignees=&amp;labels=kind%2Fextension-"
-"proposal&amp;template=extension_proposal.md&amp;title="
+"新しいエクステンションを作りたいのであれば、おめでとうございます!しかし、メーリングリストで質問したり、github で link:https://"
+"github.com/quarkusio/quarkus/issues/new?assignees=&amp;labels="
+"kind%2Fextension-proposal&amp;template=extension_proposal.md&amp;title="
 "[エクステンションの提案を]作成したりした方が良いでしょう。エクステンションの貢献は長いプロセスで、設計段階と実装前の議論段階があります。"
 
 #. type: Plain text
