--- a/i18n/po/ja_JP/_posts/2020-12-03-quarkiverse.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-12-03-quarkiverse.adoc.po
@@ -174,8 +174,8 @@ msgid ""
 msgstr ""
 "バージョン管理されたエクステンションドキュメント（ガイドを含む）を自動的に公開しましょう！Quarkiverse Hubでは、 https://"
 "antora.org[Antora]を使用して、Quarkiverse "
-"docsのウェブサイト内の各エクステンションドキュメントを集約しています。レイアウトはまだ作業中ですが、 https://quarkiverse.github."
-"io/quarkiverse-docs/ で確認できます。"
+"docsのウェブサイト内の各エクステンションドキュメントを集約しています。レイアウトはまだ作業中ですが、 https://quarkiverse."
+"github.io/quarkiverse-docs/ で確認できます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2020-12-03-quarkiverse.adoc:45
@@ -196,8 +196,8 @@ msgid ""
 "io), but the gist of it is to have a single place to browse for extensions "
 "(including https://code.quarkus.io, command line and IDE plugins)."
 msgstr ""
-"Extension レジストリはまだ作業中ですが( https://registry.quarkus.io )、その要旨は、エクステンション ( https://"
-"code.quarkus.io 、コマンドライン、IDE プラグインを含む) を単一の場所で閲覧できるようにすることです。"
+"Extension レジストリはまだ作業中ですが( https://registry.quarkus.io )、その要旨は、エクステンション ( "
+"https://code.quarkus.io 、コマンドライン、IDE プラグインを含む) を単一の場所で閲覧できるようにすることです。"
 
 #. type: Title ==
 #: upstream/_posts/2020-12-03-quarkiverse.adoc:52
