--- a/i18n/po/ja_JP/_guides/kubernetes-client.adoc.po
+++ b/i18n/po/ja_JP/_guides/kubernetes-client.adoc.po
@@ -147,8 +147,8 @@ msgid ""
 "which are normally provided by the extension by simply declaring custom "
 "versions of those beans."
 msgstr ""
-"また、このエクステンションでは、アプリケーションコードは、単にそれらのビーンズのカスタムバージョンを宣言することで、通常はエクステンションによって提供される `io."
-"fabric8.kubernetes.client.Config` や `io.fabric8.kubernetes.client."
+"また、このエクステンションでは、アプリケーションコードは、単にそれらのビーンズのカスタムバージョンを宣言することで、通常はエクステンションによって提供される "
+"`io.fabric8.kubernetes.client.Config` や `io.fabric8.kubernetes.client."
 "KubernetesClient` のいずれかをオーバーライドすることができます。"
 
 #. type: Plain text
