--- a/i18n/po/ja_JP/_guides/kubernetes-config.adoc.po
+++ b/i18n/po/ja_JP/_guides/kubernetes-config.adoc.po
@@ -36,8 +36,8 @@ msgid ""
 "them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] "
 "running the Quarkus application."
 msgstr ""
-"Quarkusには、 `kubernetes-config` エクステンションが含まれており、開発者はQuarkusアプリケーションを実行している link:"
-"https://kubernetes.io/docs/concepts/workloads/pods/pod/"
+"Quarkusには、 `kubernetes-config` エクステンションが含まれており、開発者はQuarkusアプリケーションを実行している "
+"link:https://kubernetes.io/docs/concepts/workloads/pods/pod/"
 "[Pod]にマウントしなくても、Kubernetes link:https://cloud.google.com/kubernetes-engine/"
 "docs/concepts/configmap[ConfigMaps]と link:https://cloud.google.com/"
 "kubernetes-engine/docs/concepts/secret[Secrets]を設定ソースとして使用することができます。"
