--- a/i18n/po/ja_JP/_guides/microprofile-graphql.adoc.po
+++ b/i18n/po/ja_JP/_guides/microprofile-graphql.adoc.po
@@ -884,8 +884,8 @@ msgid ""
 "it by default in `dev` and `test` modes, but it can also be explicitly "
 "configured for `production` mode as well."
 msgstr ""
-"Quarkus `smallrye-graphql` エクステンションは `GraphiQL` と同梱されており、デフォルトでは `dev` と `test` "
-"モードで有効になっていますが、 `production` モードでも明示的に設定することができます。"
+"Quarkus `smallrye-graphql` エクステンションは `GraphiQL` と同梱されており、デフォルトでは `dev` と "
+"`test` モードで有効になっていますが、 `production` モードでも明示的に設定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:380
