--- a/i18n/po/ja_JP/_guides/microprofile-health.adoc.po
+++ b/i18n/po/ja_JP/_guides/microprofile-health.adoc.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-11 16:53+0000\n"
 "PO-Revision-Date: 2021-01-10 20:27+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
@@ -811,7 +811,8 @@ msgstr "エクステンションの健康チェック"
 msgid ""
 "Some extension may provide default health checks, including the extension "
 "will automatically register its health checks."
-msgstr "エクステンションによってはデフォルトのヘルスチェックを提供している場合があり、その場合はエクステンションが自動的にヘルスチェックを登録してくれます。"
+msgstr ""
+"エクステンションによってはデフォルトのヘルスチェックを提供している場合があり、その場合はエクステンションが自動的にヘルスチェックを登録してくれます。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:330
