--- a/i18n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/i18n/po/ja_JP/_guides/neo4j.adoc.po
@@ -92,8 +92,8 @@ msgid ""
 "extension.  Those statements can be simple CRUD statements as well as "
 "complex queries, calling graph algorithms and more."
 msgstr ""
-"Quarkus Neo4jエクステンションは、公式の link:https://github.com/neo4j/neo4j-java-driver[Neo4j "
-"Java "
+"Quarkus Neo4jエクステンションは、公式の link:https://github.com/neo4j/neo4j-java-"
+"driver[Neo4j Java "
 "Driver]をベースにしています。このエクステンションは、Quarkusアプリケーションで使用できるように設定されたドライバーのインスタンスを提供します。このエクステンションを使用すると、Bolt上で任意のCypher文を発行することができます。これらのステートメントは、単純なCRUDステートメントだけでなく、複雑なクエリ、グラフアルゴリズムの呼び出しなども可能です。"
 
 #. type: Plain text
@@ -459,8 +459,8 @@ msgid ""
 msgstr ""
 "Neo4jエクステンションは、すでにあなたの `pom.xml` に追加されています。さらに、 `resteasy-jackson`, "
 "を追加しました。これにより、JAX-RSリソースを経由して、JSON形式のHTTPで `Fruit` "
-"インスタンスを公開することができます。すでに作成したプロジェクトがある場合は、 `neo4j` エクステンションを既存のQuarkusプロジェクトに `add-"
-"extension` コマンドで追加することができます。"
+"インスタンスを公開することができます。すでに作成したプロジェクトがある場合は、 `neo4j` エクステンションを既存のQuarkusプロジェクトに "
+"`add-extension` コマンドで追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/neo4j.adoc:151
