--- a/i18n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/i18n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -1203,8 +1203,8 @@ msgid ""
 "`@Body`):"
 msgstr ""
 "リアクティブルートとBean Validationを組み合わせることができます。まず、プロジェクトに `quarkus-hibernate-"
-"validator` エクステンションを追加することを忘れないでください。次に、ルートパラメータに制約を追加します（ `@Param` または `@Body` "
-"で注釈を付けます）。"
+"validator` エクステンションを追加することを忘れないでください。次に、ルートパラメータに制約を追加します（ `@Param` または "
+"`@Body` で注釈を付けます）。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-routes.adoc:516
