--- a/i18n/po/ja_JP/_guides/sending-emails.adoc.po
+++ b/i18n/po/ja_JP/_guides/sending-emails.adoc.po
@@ -677,7 +677,8 @@ msgid ""
 "This guide has shown how you can send emails from a Quarkus application.  "
 "The _mailer_ extension works in JVM and native mode."
 msgstr ""
-"このガイドでは、Quarkusアプリケーションからメールを送信する方法を紹介しました。 _メーラー_エクステンションは、JVMとネイティブモードで動作します。"
+"このガイドでは、Quarkusアプリケーションからメールを送信する方法を紹介しました。 "
+"_メーラー_エクステンションは、JVMとネイティブモードで動作します。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:289
