--- a/i18n/po/ja_JP/_posts/2019-09-23-quarkus-developer-joy-for-vs-code.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-09-23-quarkus-developer-joy-for-vs-code.adoc.po
@@ -91,8 +91,8 @@ msgid ""
 "marketplace.visualstudio.com/items?itemName=vscjava.vscode-java-pack[Java "
 "Extension Pack] installed."
 msgstr ""
-"Quarkus Tools for Visual Studio Codeは、VS Code用のいくつかのJavaエクステンションに依存しているため、 link:"
-"https://marketplace.visualstudio.com/items?itemName=vscjava.vscode-java-"
+"Quarkus Tools for Visual Studio Codeは、VS Code用のいくつかのJavaエクステンションに依存しているため、 "
+"link:https://marketplace.visualstudio.com/items?itemName=vscjava.vscode-java-"
 "pack[Java拡張パックを]インストールしておくことをお勧めします。"
 
 #. type: Plain text
@@ -337,7 +337,8 @@ msgid ""
 "After selecting the desired Quarkus extension(s), the Maven command to add "
 "the selected extensions will run in VS Code’s integrated terminal."
 msgstr ""
-"希望するQuarkusエクステンションを選択した後、選択したエクステンションを追加するためのMavenコマンドがVS Codeの統合ターミナルで実行されます。"
+"希望するQuarkusエクステンションを選択した後、選択したエクステンションを追加するためのMavenコマンドがVS "
+"Codeの統合ターミナルで実行されます。"
 
 #. type: Title ===
 #: upstream/_posts/2019-09-23-quarkus-developer-joy-for-vs-code.adoc:98
