--- a/i18n/po/ja_JP/_posts/2019-12-18-why-graalvm-19-2.adoc.po
+++ b/i18n/po/ja_JP/_posts/2019-12-18-why-graalvm-19-2.adoc.po
@@ -130,8 +130,8 @@ msgid ""
 "The Neo4J extension and more generally the Neo4J driver support no longer "
 "works in GraalVM 19.3: https://github.com/oracle/graal/issues/1995"
 msgstr ""
-"Neo4Jエクステンションとより一般的なNeo4Jドライバのサポートは、GraalVM 19.3では動作しなくなりました: https://github.com/"
-"oracle/graal/issues/1995"
+"Neo4Jエクステンションとより一般的なNeo4Jドライバのサポートは、GraalVM 19.3では動作しなくなりました: https://github."
+"com/oracle/graal/issues/1995"
 
 #. type: Plain text
 #: upstream/_posts/2019-12-18-why-graalvm-19-2.adoc:33
