--- a/i18n/po/ja_JP/_posts/2020-06-23-supersonic-subatomic-graphql.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-06-23-supersonic-subatomic-graphql.adoc.po
@@ -287,9 +287,10 @@ msgid ""
 "until then we always get a JAX-RS application. You can remove the `quarkus-"
 "resteasy` dependency as we do not need JAX-RS."
 msgstr ""
-"現時点では、作成されたサンプルアプリケーションはJAX-RSアプリケーションです。エクステンションでカスタムサンプルアプリケーションを定義できるようにするための "
-"link:https://github.com/quarkusio/quarkus/issues/8134[作業が進行中]ですが、それまでは常にJAX-"
-"RSアプリケーションを取得しています。JAX-RSを必要としないので、 `quarkus-resteasy` の依存関係を削除することができます。"
+"現時点では、作成されたサンプルアプリケーションはJAX-"
+"RSアプリケーションです。エクステンションでカスタムサンプルアプリケーションを定義できるようにするための link:https://github.com/"
+"quarkusio/quarkus/issues/8134[作業が進行中]ですが、それまでは常にJAX-RSアプリケーションを取得しています。JAX-"
+"RSを必要としないので、 `quarkus-resteasy` の依存関係を削除することができます。"
 
 #. type: Title ==
 #: upstream/_posts/2020-06-23-supersonic-subatomic-graphql.adoc:77
