--- a/i18n/po/ja_JP/_posts/2020-07-09-quarkus-cassandra-extension-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-07-09-quarkus-cassandra-extension-released.adoc.po
@@ -70,8 +70,8 @@ msgid ""
 "You can do this by including the following dependency or by selecting "
 "Cassandra client in the https://code.quarkus.io/[project generator]."
 msgstr ""
-"エクステンションを有効にするには、 `cassandra-quarkus-client` をアプリケーションに追加します。これは、以下の依存関係を含めるか、 "
-"link:https://code.quarkus.io/"
+"エクステンションを有効にするには、 `cassandra-quarkus-client` "
+"をアプリケーションに追加します。これは、以下の依存関係を含めるか、 link:https://code.quarkus.io/"
 "[プロジェクト・ジェネレーター]でCassandraクライアントを選択することで行うことができます。"
 
 #. type: delimited block -
@@ -278,8 +278,8 @@ msgid ""
 "[DataStax Astra]."
 msgstr ""
 "link:https://quarkus.io/guides/building-native-image[ネイティブ・モード]でQuarkus "
-"Cassandraエクステンションを使用する方法を含む link:https://github.com/datastax/cassandra-quarkus/"
-"blob/master/documentation/src/main/asciidoc/cassandraclient."
+"Cassandraエクステンションを使用する方法を含む link:https://github.com/datastax/cassandra-"
+"quarkus/blob/master/documentation/src/main/asciidoc/cassandraclient."
 "adoc[クイック・スタート・ガイド]で、この例や他の多くの例を取得できます。Cassandraを数分で使いこなせるようになりたいユーザーは、 link:"
 "https://astra.datastax.com/[DataStax Astra]のフリーティアを試してみてください。"
 
@@ -294,9 +294,9 @@ msgid ""
 "[Cassandra] and https://quarkus.io/community/[Quarkus] communities."
 msgstr ""
 "フィードバックを大切にしていますので、遠慮なく機能リクエストやバグレポートを link:https://github.com/datastax/"
-"cassandra-quarkus[エクステンションのGitHubリポジトリ]で公開したり、 link:https://community.datastax."
-"com/[community.datastax.com]で質問したり、 link:https://cassandra.apache.org/"
-"community/[Cassandra]や link:https://quarkus.io/community/"
+"cassandra-quarkus[エクステンションのGitHubリポジトリ]で公開したり、 link:https://community."
+"datastax.com/[community.datastax.com]で質問したり、 link:https://cassandra.apache."
+"org/community/[Cassandra]や link:https://quarkus.io/community/"
 "[Quarkusの]コミュニティに参加したりしてください。"
 
 #. type: Plain text
