--- a/i18n/po/ja_JP/_guides/security-built-in-authentication.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-built-in-authentication.adoc.po
@@ -2,84 +2,82 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-15 14:30+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-built-in-authentication.adoc:6
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Quarkus - Built-In Authentication Support"
 msgstr "Quarkus - 組み込みの認証サポート"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:11
-#, fuzzy
 msgid ""
 "This document describes the Quarkus built-in authentication mechanisms for "
 "HTTP based FORM, BASIC and Mutual TLS authentication as well as the "
 "proactive authentication."
 msgstr ""
-"このドキュメントでは、HTTPベースのFORM認証、BASIC認証、相互TLS認証、およびプロアクティブ認証のためのQuarkusの組み込み認証メカニズムについて説明します。"
+"このドキュメントでは、HTTPベースのFORM認証、BASIC認証、相互TLS認証、およびプ"
+"ロアクティブ認証のためのQuarkusの組み込み認証メカニズムについて説明します。"
 
 #. type: Title ==
 #: upstream/_guides/security-built-in-authentication.adoc:13
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Basic Authentication"
-msgstr "基本認証"
+msgstr "ベーシック認証"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:17
-#, fuzzy
 msgid ""
 "To enable basic authentication set `quarkus.http.auth.basic=true`. You must "
 "also have at least one extension installed that provides a username/password "
 "based `IdentityProvider`, such as link:security-jdbc[Elytron JDBC]."
 msgstr ""
-"基本的な認証を有効にするには、 `quarkus.http.auth.basic=true` を設定します。また、ユーザー名/パスワードベースの "
-"`IdentityProvider` を提供するエクステンションを少なくとも 1 つインストールしておく必要があります。"
+"ベーシック認証を有効にするには、 `quarkus.http.auth.basic=true` を設定しま"
+"す。また、ユーザー名/パスワードベースの `IdentityProvider` を提供するエクステ"
+"ンションを少なくとも 1 つインストールしておく必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:19
-#, fuzzy
 msgid ""
 "Please see link:security#identity-providers[Security Identity Providers] for "
 "more information."
-msgstr "詳細については、 link:security#identity-providers[セキュリティ ID プロバイダを]参照してください。"
+msgstr ""
+"詳細については、 link:security#identity-providers[セキュリティ ID プロバイダ]"
+"を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:21
-#, fuzzy
 msgid ""
 "Please also see link:security-testing#configuring-user-"
 "information[Configuring User Information in application.properties] section."
 msgstr ""
-"link:security-testing#configuring-user-information[application."
-"properties]セクション link:security-testing#configuring-user-"
-"information[のユーザー情報の設定]も参照してください。"
+"link:security-testing#configuring-user-information[application.propertiesで"
+"ユーザー情報の設定]セクションも参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/security-built-in-authentication.adoc:23
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Form Based Authentication"
 msgstr "フォームベース認証"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:29
-#, fuzzy
 msgid ""
 "Quarkus provides form based authentication that works in a similar manner to "
 "traditional Servlet form based auth. Unlike traditional form authentication, "
@@ -88,11 +86,15 @@ msgid ""
 "information is stored in an encrypted cookie, which can be read by all "
 "members of the cluster (provided they all share the same encryption key)."
 msgstr ""
-"Quarkusは、従来のサーブレットのフォームベースの認証と同様の方法で動作するフォームベースの認証を提供します。従来のフォーム認証とは異なり、Quarkusはクラスター化されたHTTPセッションをサポートしていないため、認証されたユーザーはHTTPセッションに保存されません。代わりに、認証情報は暗号化されたCookieに保存され、クラスターのすべてのメンバーが読み取ることができます（すべてのメンバーが同じ暗号化キーを共有している場合）。"
+"Quarkusは、従来のサーブレットのフォームベースの認証と同様の方法で動作する"
+"フォームベースの認証を提供します。従来のフォーム認証とは異なり、Quarkusはクラ"
+"スター化されたHTTPセッションをサポートしていないため、認証されたユーザーは"
+"HTTPセッションに保存されません。代わりに、認証情報は暗号化されたCookieに保存"
+"され、クラスターのすべてのメンバーが読み取ることができます（すべてのメンバー"
+"が同じ暗号化キーを共有している場合）。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:35
-#, fuzzy
 msgid ""
 "The encryption key can be set using the `quarkus.http.auth.session."
 "encryption-key` property, and it must be at least 16 characters long. This "
@@ -102,45 +104,48 @@ msgid ""
 "clocks synchronized. At one minute intervals a new cookie will be generated "
 "with an updated expiry time if the session is in use."
 msgstr ""
-"暗号化キーは `quarkus.http.auth.session.encryption-key` プロパティを使って設定でき、少なくとも 16 "
-"文字の長さでなければなりません。このキーは SHA-256 を使ってハッシュ化され、その結果のダイジェストがクッキー値の AES-256 "
-"暗号化のキーとして使用されます。このクッキーは暗号化された値の一部として有効期限を含んでいますので、クラスター内のすべての "
-"ノードはクロックを同期させなければなりません。1 分間隔で、セッションが使用中であれば、更新された有効期限時間を持つ新しいクッキーが生成されます。"
+"暗号化キーは `quarkus.http.auth.session.encryption-key` プロパティを使って設"
+"定でき、少なくとも 16 文字の長さでなければなりません。このキーは SHA-256 を"
+"使ってハッシュ化され、その結果のダイジェストがクッキー値の AES-256 暗号化の"
+"キーとして使用されます。このクッキーは暗号化された値の一部として有効期限を含"
+"んでいますので、クラスター内のすべての ノードはクロックを同期させなければなり"
+"ません。1 分間隔で、セッションが使用中であれば、更新された有効期限時間を持つ"
+"新しいクッキーが生成されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:37
-#, fuzzy
 msgid "The following properties can be used to configure form based auth:"
-msgstr "以下のプロパティを使用して、フォームベースの認証を設定することができます。"
+msgstr ""
+"以下のプロパティを使用して、フォームベース認証を設定することができます。"
 
 #. type: Title ==
 #: upstream/_guides/security-built-in-authentication.adoc:41
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Mutual TLS Authentication"
 msgstr "相互TLS認証"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:44
-#, fuzzy
 msgid ""
 "Quarkus provides mTLS authentication so that you can authenticate users "
 "based on their X.509 certificates."
-msgstr "QuarkusはmTLS認証を提供しているので、X.509証明書に基づいてユーザーを認証できます。"
+msgstr ""
+"QuarkusはmTLS認証を提供しているので、X.509証明書に基づいてユーザーを認証でき"
+"ます。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:46
-#, fuzzy
 msgid ""
 "To use this authentication method, you should first enable SSL for your "
 "application. For more details, check the link:http-reference#ssl[Supporting "
 "secure connections with SSL] guide."
 msgstr ""
-"この認証方法を利用するには、まずアプリケーションでSSLを有効にする必要があります。詳細については、「 link:http-"
-"reference#ssl[SSLによるセキュアな接続のサポート]」を参照してください。"
+"この認証方法を利用するには、まずアプリケーションでSSLを有効にする必要がありま"
+"す。詳細については、 link:http-reference#ssl[SSLによるセキュアな接続のサポー"
+"ト]を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:50
-#, fuzzy
 msgid ""
 "Once your application is accepting secure connections, the next step is to "
 "configure a `quarkus.http.ssl.certificate.trust-store-file` holding all the "
@@ -148,88 +153,86 @@ msgid ""
 "application should ask for certificates when a client (e.g.: browser or "
 "another service) tries to access one of its protected resources."
 msgstr ""
-"アプリケーションが安全な接続を受け入れたら、次のステップは、アプリケーションが信頼すべきすべての証明書を保持する `quarkus.http.ssl."
-"certificate.trust-store-file` を設定し、クライアント(例: "
-"ブラウザや他のサービス)が保護されたリソースにアクセスしようとしたときに、アプリケーションがどのように証明書を要求するかを設定します。"
+"アプリケーションが安全な接続を受け入れたら、次のステップは、アプリケーション"
+"が信頼すべきすべての証明書を保持する `quarkus.http.ssl.certificate.trust-"
+"store-file` を設定し、クライアント(例: ブラウザや他のサービス)が保護されたリ"
+"ソースにアクセスしようとしたときに、アプリケーションがどのように証明書を要求"
+"するかを設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-built-in-authentication.adoc:58
 #, no-wrap
 msgid ""
-"quarkus.http.ssl.certificate.key-store-file=server-keystore.jks            "
-"<1>\n"
+"quarkus.http.ssl.certificate.key-store-file=server-keystore.jks            <1>\n"
 "quarkus.http.ssl.certificate.key-store-password=the_key_store_secret\n"
-"quarkus.http.ssl.certificate.trust-store-file=server-truststore.jks        "
-"<2>\n"
+"quarkus.http.ssl.certificate.trust-store-file=server-truststore.jks        <2>\n"
 "quarkus.http.ssl.certificate.trust-store-password=the_trust_store_secret\n"
-"quarkus.http.ssl.client-auth=required                                      "
-"<3>\n"
+"quarkus.http.ssl.client-auth=required                                      <3>\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/security-built-in-authentication.adoc:61
 #, no-wrap
 msgid ""
-"quarkus.http.auth.permission.default.paths=/*                              "
-"<4>\n"
+"quarkus.http.auth.permission.default.paths=/*                              <4>\n"
 "quarkus.http.auth.permission.default.policy=authenticated\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:63
-#, fuzzy
 msgid "Configures a key store where the server's private key is located."
 msgstr "サーバの秘密鍵が置かれている鍵ストアを設定します。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:64
-#, fuzzy
 msgid ""
 "Configures a trust store from where the trusted certificates are going to be "
 "loaded from."
-msgstr "信頼された証明書がロードされる場所からトラストストアを構成します。"
+msgstr "信頼された証明書がロードされるトラストストアを構成します。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:67
-#, fuzzy
 msgid ""
 "Defines that the server should *always* ask certificates from clients. You "
 "can relax this behavior by using `REQUEST` so that the server should still "
 "accept requests without a certificate. Useful when you are also supporting "
 "authentication methods other than mTLS."
 msgstr ""
-"サーバが *常に*クライアントからの証明書を要求することを定義します。 `REQUEST` を使用することで、この動作を緩和することができます。mTLS "
-"以外の認証方法もサポートしている場合に便利です。"
+"サーバが *常に*クライアントからの証明書を要求することを定義します。 "
+"`REQUEST` を使用することで、この動作を緩和することができます。mTLS 以外の認証"
+"方法もサポートしている場合に便利です。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:68
-#, fuzzy
 msgid ""
 "Defines a policy where only authenticated users should have access to "
 "resources from your application."
-msgstr "認証されたユーザーのみがアプリケーションからリソースにアクセスできるようにするポリシーを定義します。"
+msgstr ""
+"認証されたユーザーのみがアプリケーションからリソースにアクセスできるようにす"
+"るポリシーを定義します。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:71
-#, fuzzy
 msgid ""
 "Once the incoming request matches a valid certificate in the truststore, "
 "your application should be able to obtain the subject by just injecting a "
 "`SecurityIdentity` as follows:"
 msgstr ""
-"受信したリクエストがトラストストアの有効な証明書と一致したら、アプリケーションは以下のように `SecurityIdentity` "
-"を注入するだけでサブジェクトを取得できるようになるはずです。"
+"受信したリクエストがトラストストアの有効な証明書と一致したら、アプリケーショ"
+"ンは以下のように `SecurityIdentity` を注入するだけでサブジェクトを取得できる"
+"ようになるはずです。"
 
 #. type: Block title
 #: upstream/_guides/security-built-in-authentication.adoc:73
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Obtaining the subject"
-msgstr "主語の取得"
+msgstr "subjectの取得"
 
 #. type: delimited block -
 #: upstream/_guides/security-built-in-authentication.adoc:78
 #, no-wrap
-msgid "@Inject\n"
+msgid ""
+"@Inject\n"
 "SecurityIdentity identity;\n"
 msgstr ""
 
@@ -246,13 +249,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:87
-#, fuzzy
 msgid "You should also be able to get the certificate as follows:"
-msgstr "また、以下のように証明書を取得できるようにしておきましょう。"
+msgstr "また、以下のように証明書を取得できるようにしておきましょう："
 
 #. type: Block title
 #: upstream/_guides/security-built-in-authentication.adoc:89
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Obtaining the certificate"
 msgstr "証明書の取得"
 
@@ -268,20 +270,18 @@ msgstr ""
 #: upstream/_guides/security-built-in-authentication.adoc:97
 #, no-wrap
 msgid ""
-"CertificateCredential credential = identity."
-"getCredential(CertificateCredential.class);\n"
+"CertificateCredential credential = identity.getCredential(CertificateCredential.class);\n"
 "X509Certificate certificate = credential.getCertificate();\n"
 msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-built-in-authentication.adoc:99
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Authorization"
 msgstr "認可"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:103
-#, fuzzy
 msgid ""
 "The information from the client certificate can be used to enhance Quarkus "
 "`SecurityIdentity`. For example, one can add new roles after checking a "
@@ -290,46 +290,48 @@ msgid ""
 "Customization] section for more information about customizing Quarkus "
 "`SecurityIdentity`."
 msgstr ""
-"クライアント証明書からの情報は、Quarkusを強化するために使用することができます `SecurityIdentity` "
-"。たとえば、クライアント証明書のサブジェクト名などを確認した後に、新しいロールを追加することができます。Quarkusのカスタマイズの詳細については、 "
-"link:security-customization#security-identity-"
-"customization[SecurityIdentity]のカスタマイズのセクションを参照してください `SecurityIdentity` 。"
+"クライアント証明書からの情報は、Quarkus `SecurityIdentity` を強化するために使"
+"用することができます 。たとえば、クライアント証明書のサブジェクト名などを確認"
+"した後に、新しいロールを追加することができます。Quarkus `SecurityIdentity` の"
+"カスタマイズの詳細については、 link:security-customization#security-identity-"
+"customization[SecurityIdentity]のカスタマイズのセクションを参照してくださ"
+"い 。"
 
 #. type: Title ==
 #: upstream/_guides/security-built-in-authentication.adoc:105
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Proactive Authentication"
 msgstr "プロアクティブ認証"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:109
-#, fuzzy
 msgid ""
 "By default Quarkus does what we call proactive authentication. This means "
 "that if an incoming request has a credential then that request will always "
 "be authenticated (even if the target page does not require authentication)."
 msgstr ""
-"デフォルトでは、Quarkusはプロアクティブ認証と呼ばれる認証を行います。これは、受信したリクエストにクレデンシャルがある場合、そのリクエストは常に認証されます（ターゲットページが認証を必要としない場合でも）。"
+"デフォルトでは、Quarkusはプロアクティブ認証と呼ばれる認証を行います。これは、"
+"受信したリクエストにクレデンシャルがある場合、そのリクエストは常に認証されま"
+"す（ターゲットページが認証を必要としない場合でも）。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:112
-#, fuzzy
 msgid ""
 "This means that requests with an invalid credential will always be rejected, "
 "even for public pages. You can change this behavior and only authenticate "
 "when required by setting `quarkus.http.auth.proactive=false`."
 msgstr ""
-"これは、公開ページであっても、無効なクレデンシャルを持つリクエストは常に拒否されることを意味します。この動作を変更して、 `quarkus.http."
-"auth.proactive=false` を設定することで必要な場合のみ認証を行うことができます。"
+"これは、公開ページであっても、無効なクレデンシャルを持つリクエストは常に拒否"
+"されることを意味します。この動作を変更して、 `quarkus.http.auth."
+"proactive=false` を設定することで必要な場合のみ認証を行うことができます。"
 
 #. type: Title ==
 #: upstream/_guides/security-built-in-authentication.adoc:113
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "References"
-msgstr "参考文献"
+msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:115
-#, fuzzy
 msgid "link:security[Quarkus Security]"
 msgstr "link:security[Quarkusのセキュリティ]"
